--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,22 +9,19 @@
     #Container
       #Nav
         - if current_user
-          %ul
-            %li 
-            %li= link_to((t :layout_menu_domains), domains_path)
-            %li= link_to((t :layout_menu_templates), zone_templates_path)
-            %li= link_to((t :layout_menu_macros), macros_path)
+          %ul{:id => "navbar"}
+            %li
+            %li{:class => "active", :onclick => "turnActive(this)"}= link_to((t :layout_menu_domains), domains_path)
+            %li{:onclick => "turnActive(this)"}= link_to((t :layout_menu_templates), zone_templates_path)
+            %li{:onclick => "turnActive(this)"}= link_to((t :layout_menu_macros), macros_path)
             - if current_user.admin?
-              %li= link_to((t :layout_menu_logs), audits_path)
-              %li= link_to((t :layout_menu_users), users_path)
-              %li= link_to((t :layout_menu_reports), reports_path)
+              %li{:onclick => "turnActive(this)"}= link_to((t :layout_menu_logs), audits_path)
+              %li{:onclick => "turnActive(this)"}= link_to((t :layout_menu_users), users_path)
+              %li{:onclick => "turnActive(this)"}= link_to((t :layout_menu_reports), reports_path)
             %li= link_to((t :layout_menu_logout), destroy_user_session_path)
       #Body
         = show_flash
-
         = yield
-
-
       #Footer
         = link_to "PowerDNS on Rails", "http://www.opensourcery.co.za/powerdns-on-rails", :target => '_blank'
         \- &copy; Kenneth Kalmer
@@ -36,3 +33,15 @@
         \-
         = link_to "Github", "http://github.com/kennethkalmer/powerdns-on-rails", :target => '_blank'
 
+:javascript
+    function turnActive(element) {
+     //get all list items:
+     var liArray = document.getElementById("navbar").getElementsByTagName("li");
+
+      //make all items inactive
+      for (var i = 0; i < liArray.length; i++)
+          liArray[i].className = "inactive";
+
+      //make clicked item active:
+      element.className = "active";
+  }
