--- a/app/views/domains/edit.html.haml
+++ b/app/views/domains/edit.html.haml
@@ -1,4 +1,7 @@
-%h1.underline=t :title_update_zone
+#header
+  %planet
+    =image_tag "../images/planet.png",  :class => "header_icons"
+  %left=t :title_update_zone
 
 / These divs contain the help information.
 %div{ :style => 'display: none' }
