--- a/app/views/domains/new.html.haml
+++ b/app/views/domains/new.html.haml
@@ -1,4 +1,7 @@
-%h1.underline= t :title_domain_new_zone
+#header
+  %planet
+    =image_tag "../images/planet.png",  :class => "header_icons"
+  %left= t :title_domain_new_zone
 
 = render :partial => 'new'
 
