--- a/app/views/templates/edit.html.haml
+++ b/app/views/templates/edit.html.haml
@@ -1,3 +1,6 @@
-%h1.underline= t("title_template_editing.update")
+#header
+  %planet
+    =image_tag "../images/planet.png",  :class => "header_icons"
+  %left= t("title_template_editing.update")
 
 = render :partial => 'form'
