--- a/app/views/macros/show.html.haml
+++ b/app/views/macros/show.html.haml
@@ -8,11 +8,13 @@
   #content-field=t :help_macro_content_field
   #name-field=t :help_macro_name_field
 
-%h1.underline
-  = @macro.name
+#header
+  %planet
+    =image_tag "../images/planet.png",  :class => "header_icons"
+  %long= @macro.name
   &nbsp;
   = link_to edit_macro_path( @macro ) do
-    = info_icon( 'brick_edit.png', 'edit-macro' )
+    = info_icon( 'edit.png', 'edit-macro' )
 
 %table.grid
   %tr
