Added Macros and logs pages headers

--- a/app/views/audits/index.html.haml
+++ b/app/views/audits/index.html.haml
@@ -1,3 +1,7 @@
-%h1.underline= t :title_audit_search_logs
+#header
+  %planet
+    =image_tag "../images/planet.png",  :class => "header_icons"
+  %left= t :title_audit_search_logs
 
+%br
 %em= t :text_audit_comming_soon
