--- a/app/views/macros/index.html.haml
+++ b/app/views/macros/index.html.haml
@@ -2,16 +2,21 @@
   #new-macro= t :help_macro_new
   #delete-macro= t :help_macro_delete
 
-%ul.start
-  %li
-    = link_to new_macro_path do
-      = info_icon('brick_add.png', 'new-macro')
-    = link_to t(:label_macro_add), new_macro_path
-
-%h1.underline Macros
+#header
+  %planet
+    =image_tag "../images/planet.png",  :class => "header_icons"
+  Macros
 
 - if @macros.size > 0
-  %table
-    = render :partial => @macros
+  #macroslist  
+    %table
+      = render :partial => @macros
 - else
   %em= t :message_macro_not_defined
+
+
+%ul.start
+  = link_to new_macro_path do
+    = info_icon('brick_add.png', 'new-macro')
+  = link_to t(:label_macro_add), new_macro_path
+
