--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,4 +1,7 @@
-%h1.underline Update user
+#header
+  %planet
+    =image_tag "../images/planet.png",  :class => "header_icons"
+  Update user
 
 = render :partial => 'form'
 
