--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,11 +1,15 @@
 #new-user{ :style => 'display: none' }= t :help_user_add
 
-%h2.underline= t :title_users
+#header
+  %planet
+    =image_tag "../images/planet.png",  :class => "header_icons"
+  = t :title_users
 
 %table.gridwide
   %tr
-    %td{ :colspan => 5 }
-      = link_to info_icon('user_add.png', 'new-user'), new_user_path
-      = link_to t(:label_user_create), new_user_path
   = render :partial => 'user', :collection => @users
+
+%ul.start
+  = link_to info_icon('user_add.png', 'new-user'), new_user_path
+  = link_to t(:label_user_create), new_user_path
 
