--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,3 +1,6 @@
-%h1.underline New user
+#header
+  %planet
+    =image_tag "../images/planet.png",  :class => "header_icons"
+  New user
 
 = render :partial => 'form'
