--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -390,9 +390,9 @@ a img {
 .flash-notice, .flash-info, .flash-error, .flash-warning, .errorExplanation, .generic-warning {
     padding: 5px;
     padding-left: 30px;
+    margin-bottom: 40px;
     background-position: 5px 5px;
     background-repeat: no-repeat;
-    z-index:2;
 }
 .flash-info, .flash-notice {
     border: 1px solid #97FF97;
